--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -169,19 +169,19 @@ x86_64.MacOSX.gpp.executable.extension=
 ##################################################################
 
 #
-# Windows g++ mingw32
+# Windows g++ TDM-GCC 4.7.1
 #
 x86.Windows.linker=g++
 
 # options for g++ compiler front end
 x86.Windows.gpp.cpp.compiler=g++
 x86.Windows.gpp.cpp.defines=WIN32 _WIN32_WINNT=0x0501 __MINGW__
-x86.Windows.gpp.cpp.options=-c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
+x86.Windows.gpp.cpp.options=-m32 -c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
 x86.Windows.gpp.cpp.includes=
 x86.Windows.gpp.cpp.excludes=
 
 # options for gcc linker front end
-x86.Windows.gpp.linker.options=-shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
+x86.Windows.gpp.linker.options=-m32 -shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
 x86.Windows.gpp.linker.sysLibs=stdc++ ws2_32
 x86.Windows.gpp.linker.libs=
 x86.Windows.gpp.linker.dependency=libgcc_s_sjlj-1.dll libstdc++-6.dll
@@ -198,19 +198,19 @@ x86.Windows.gpp.jni.extension=dll
 x86.Windows.gpp.executable.extension=
 
 #
-# Windows g++ mingw64
+# Windows g++ TDM-GCC 4.7.1
 #
 amd64.Windows.linker=g++
 
 # options for g++ compiler front end
 amd64.Windows.gpp.cpp.compiler=g++
 amd64.Windows.gpp.cpp.defines=WIN32 _WIN32_WINNT=0x0501 __MINGW__
-amd64.Windows.gpp.cpp.options=-c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
+amd64.Windows.gpp.cpp.options=-m64 -c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
 amd64.Windows.gpp.cpp.includes=
 amd64.Windows.gpp.cpp.excludes=
 
 # options for gcc linker front end
-amd64.Windows.gpp.linker.options=-shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
+amd64.Windows.gpp.linker.options=-m64 -shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
 amd64.Windows.gpp.linker.sysLibs=stdc++ ws2_32
 amd64.Windows.gpp.linker.libs=
 amd64.Windows.gpp.linker.dependency=libgcc_s_sjlj_64-1.dll libstdc++_64-6.dll
