--- a/barchart-udt-it/pom.xml
+++ b/barchart-udt-it/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>com.barchart.udt</groupId>
 		<artifactId>barchart-udt-archon</artifactId>
-		<version>2.2.0-SNAPSHOT</version>
+		<version>2.2.0</version>
 		<relativePath>../barchart-udt-archon</relativePath>
 	</parent>
 
@@ -34,7 +34,7 @@
 	<properties>
 
 		<!-- should be set by developer during interactive work -->
-		<versionEclipse>2.2.0-SNAPSHOT</versionEclipse>
+		<versionEclipse>2.2.1-SNAPSHOT</versionEclipse>
 
 		<!-- will be set by maven-invoker-plugin during jenkins build -->
 		<versionJenkins>@project.version@</versionJenkins>
