--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -27,7 +27,7 @@
 		<url>https://github.com/barchart/barchart-udt</url>
 		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-udt.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>master</tag>
 	</scm>
 
 	<description>Java wrapper around native C++ UDT protocol</description>
