--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>com.barchart.udt</groupId>
 	<artifactId>barchart-udt</artifactId>
-	<version>0.0.0</version>
+	<version>2.3.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<description>eclipse import helper</description>
@@ -38,11 +38,17 @@
 
 		<!-- examples -->
 		<module>barchart-udt-demo</module>
-
-		<!-- netty support -->
-		<module>barchart-udt-netty3</module>
-		<module>barchart-udt-netty4</module>
-
 	</modules>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.4.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
