--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -155,7 +155,7 @@ x86_64.MacOSX.gpp.linker.options=-dynamic -bundle -shared-libgcc -m64 -Wl,-arch,
 x86_64.MacOSX.gpp.linker.sysLibs=stdc++
 x86_64.MacOSX.gpp.linker.libs=
 
-x86_64.MacOSX.gpp.java.include=include
+x86_64.MacOSX.gpp.java.include=include;include/darwin
 x86_64.MacOSX.gpp.java.runtimeDirectory=IGNORED
 
 x86_64.MacOSX.gpp.lib.prefix=lib
