trying to get build to work

--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -117,20 +117,20 @@
 										</artifactItem>
 
 										<!-- Collect native libraries. -->
-										<artifactItem>
+						<!-- 				<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${arm}</classifier>
 											<type>nar</type>
-										</artifactItem>
-										<artifactItem>
+										</artifactItem> -->
+									<!-- 	<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${lin32}</classifier>
 											<type>nar</type>
-										</artifactItem>
+										</artifactItem> -->
 										<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
@@ -138,21 +138,21 @@
 											<classifier>${lin64}</classifier>
 											<type>nar</type>
 										</artifactItem>
-										<artifactItem>
+									<!-- 	<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${mac32}</classifier>
 											<type>nar</type>
-										</artifactItem>
-										<artifactItem>
+										</artifactItem> -->
+						<!-- 				<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
 											<classifier>${mac64}</classifier>
-											<type>nar</type>
-										</artifactItem>
-										<artifactItem>
+											<type>nar</type> 
+										</artifactItem>-->
+									<!-- 	<artifactItem>
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
@@ -165,7 +165,7 @@
 											<version>${dependencyVersion}</version>
 											<classifier>${win64}</classifier>
 											<type>nar</type>
-										</artifactItem>
+										</artifactItem> -->
 
 									</artifactItems>
 								</configuration>
