trying to get build to work

--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -171,7 +171,7 @@
 								</configuration>
 							</execution>
 
-							<!-- Make local copy of javadoc and sources. -->
+							<!-- Make local copy of javadoc and sources. 
 							<execution>
 								<id>bundle-copy-docs</id>
 								<phase>generate-resources</phase>
@@ -203,7 +203,7 @@
 									<overWriteSnapshots>true</overWriteSnapshots>
 								</configuration>
 							</execution>
-
+-->
 						</executions>
 					</plugin>
 
